--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_locutor.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_locutor.html
@@ -21,10 +21,10 @@
     {% endif %}
     {% if success %}
     <div id="componente_modal_info">
-            <modal-info v-if="showModal" url_redirect="{% url 'webadminradio:segmentos' %}">
-                <h3 slot="header">Información</h3>
-                <p slot="body">{{success}}</p>
-            </modal-info>
+        <modal-info v-if="showModal" url_redirect="{% url 'webadminradio:segmentos' %}">
+            <h3 slot="header">Información</h3>
+            <p slot="body">{{success}}</p>
+        </modal-info>
     </div>
     {% endif %}
     <h4><b>Información del Locutor</b></h4>
@@ -46,22 +46,15 @@
             <input id="telefono" name="telefono" type="text" class="form-control" oninvalid="this.setCustomValidity('Ingrese una fecha')" oninput="this.setCustomValidity('')" required>
         </div>
         <!-- Selección de Emisora -->
-        <div class="form-group">
-            <label for="emisoraSelect">Seleccione la emisora</label>
-            <select id="emisoraSelect" class="custom-select form-control" name="emisora" oninvalid="this.setCustomValidity('Ingrese una emisora válida')" required oninput="this.setCustomValidity('')">
-                <option selected disabled>Seleccione la emisora</option>
-                {% for emisora in emisoras %}
-                    <option value="{{ emisora.id }}">{{ emisora.nombre }}</option>
-                {% endfor %}
-            </select>
-        </div>
+        <h5><b>Seleccion de programas</b></h5>
+        <hr>
         <!-- Selección de Segmentos -->
         <div class="form-group">
-            <label for="segmentoSelect">Seleccione Segmento</label>
             <div id="componente_segmento">
                 <segmento></segmento>
             </div>
         </div>
+        <hr>
         <!-- Redes Sociales -->
         <div class="form-group">
             <label for="">Redes Sociales (Opcional)</label>
@@ -84,7 +77,6 @@
 {% endblock %}
 {% block page_script %}
     <script src="{% static 'webAdminRadio/js/img_preview.js' %}"></script>
-    <script src="{% static 'webAdminRadio/js/locutores_segmentos.js' %}"></script>
     <script src="{% static 'webAdminRadio/js/componentes/EmisoraComponent.js' %}"></script>
     <script src="{% static 'webAdminRadio/js/componentes/RedSocialComponent.js' %}"></script>
     <script src="{% static 'webAdminRadio/js/componentes/ModalInfoComponent.js' %}"></script>
