--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/base_site.html
@@ -35,7 +35,7 @@
                 <a class="action" href="#"><i class="fas fa-edit"></i>Sugerencias</a>
             </li>
             <li>
-                <a class="action" href="#"><i class="fas fa-ad"></i>Publicidad</a>
+                <a class="action" href="{% url 'webadminradio:publicidad' %}"><i class="fas fa-ad"></i>Publicidad</a>
             </li>
             <li>
                 <a class="action" href="#"><i class="fas fa-file-alt"></i>Reportes</a>
