--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/publicidad.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/publicidad.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/datatables.css' %}">
 {% endblock %}
 {% block agregar_button %}
-    <a href="{% url 'webadminradio:agregar_segmento' %}" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Agregar Segmento</i></a>
+    <a href="{% url 'webadminradio:agregar_publicidad' %}" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Agregar Publicidad</i></a>
 {% endblock %}
 {% block content %}
     <label for="emisoraSelect">Seleccione una emisora</label>
