--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_locutor.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/agregar_locutor.html
@@ -21,31 +21,43 @@
     {% endif %}
     {% if success %}
     <div id="componente_modal_info">
-        <modal-info v-if="showModal" url_redirect="{% url 'webadminradio:segmentos' %}">
+        <modal-info v-if="showModal" url_redirect="{% url 'webadminradio:locutores' %}">
             <h3 slot="header">Información</h3>
             <p slot="body">{{success}}</p>
         </modal-info>
     </div>
     {% endif %}
     <h4><b>Información del Locutor</b></h4>
-    <form id="addLocutor" onsubmit="return validate()" action="{% url 'webadminradio:agregar_segmento' %}" method="POST" enctype="multipart/form-data">
+    <form id="addLocutor" onsubmit="return validate()" action="{% url 'webadminradio:agregar_locutor' %}" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <!-- Nombre del locutor -->
-        <div class="form-group">
-            <label for="nombreInput">Nombre Completo</label>
-            <input id="nombreInput" name="nombre" type="text" class="form-control" placeholder="Ingrese el nombre completo del locutor" oninvalid="this.setCustomValidity('Ingrese un nombre para el segmento')" oninput="this.setCustomValidity('')" required>
+        <div class="form-group row">
+            <label for="nombre" class="col-sm-1 col-form-label">Nombre</label>
+            <div class="col-sm-11">
+                <input id="nombre" name="nombre" type="text" class="form-control" oninvalid="this.setCustomValidity('Ingrese un nombre válido')" oninput="this.setCustomValidity('')" required>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="apellido" class="col-sm-1 col-form-label">Apellido</label>
+            <div class="col-sm-11">
+                <input id="apellido" name="apellido" type="text" class="form-control" oninvalid="this.setCustomValidity('Ingrese un apellido válido')" oninput="this.setCustomValidity('')" required>
+            </div>
         </div>
         <!-- Fecha de Nacimiento -->
         <div class="form-group">
             <label for="fechaNac">Fecha de Nacimiento</label>
             <input id="fechaNac" name="fechaNac" type="date" class="form-control" oninvalid="this.setCustomValidity('Ingrese una fecha')" oninput="this.setCustomValidity('')" required>
         </div>
-        <!-- Teléfono -->
+        <!-- E-mail -->
+        <div class="form-group">
+            <label for="email">Direccion de correo electrónico</label>
+            <input id="email" name="email" type="email" class="form-control" oninvalid="this.setCustomValidity('Ingrese una direccion válida')" oninput="this.setCustomValidity('')" required> 
+        </div>
+        <!-- Teléfono --> 
         <div class="form-group">
             <label for="telefono">Teléfono</label>
             <input id="telefono" name="telefono" type="text" class="form-control" oninvalid="this.setCustomValidity('Ingrese una fecha')" oninput="this.setCustomValidity('')" required>
         </div>
-        <!-- Selección de Emisora -->
         <h5><b>Seleccion de programas</b></h5>
         <hr>
         <!-- Selección de Segmentos -->
@@ -68,10 +80,11 @@
                 <label for="imgSegmento" class="custom-file-label">Foto</label>
                 <input type="file" name="imagen" class="custom-file-input" id="imgSegmento" accept=".png, .jpg, .jpeg" oninvalid="this.setCustomValidity('Ingrese una imagen para el segmento')" oninput="this.setCustomValidity('')" required>
                 <div class="img-holder">
-                    <img id="preview" src="{% static 'webAdminRadio/images/placeholder.png' %}">
+                    <img id="preview" class="image" src="{% static 'webAdminRadio/images/placeholder.png' %}">
                 </div>
             </div>
         </div>
+        <input type="hidden" id="rol" name="rol" value="L">
         <button type="submit" class="btn btn-primary btn-lg submit"><i class="fas fa-plus-circle"></i>Agregar Locutor</button>
     </form>
 {% endblock %}
