--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/locutores.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/locutores.html
@@ -12,8 +12,31 @@
     <a href="{% url 'webadminradio:agregar_locutor' %}" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Agregar Locutor</i></a>
 {% endblock %}
 {% block content %}
-
+    <label for="emisoraSelect">Seleccione un segmento</label>
+    <select name="dia" id="segmentoSelect" class="custom-select">
+        <option selected disabled>--</option>
+        {% for segmento in segementos %}
+            <option value="{{ segmento.id }}">{{ segmento.nombre }}</option>
+        {% endfor %}
+    </select>
+    <div class="table-container">
+        <table id="data_table" class="table table-striped table-bordered dt-body-center">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Imagen</th>
+                    <th>Nombre</th>
+                    <th>Emisora</th>
+                    <th>Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
 {% block page_script %}
-
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+    <script src="{% static 'webAdminRadio/js/datatables_locutores.js' %}"></script>
 {% endblock %}
