--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/segmentos.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/segmentos.html
@@ -7,11 +7,32 @@
 {% endblock %}
 {% block page_style %}
     <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/datatables.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/componentes/modal_info.css' %}">
 {% endblock %}
 {% block agregar_button %}
     <a href="{% url 'webadminradio:agregar_segmento' %}" class="btn btn-primary btn-md ml-auto action" role="button"><i class="fas fa-plus-circle"></i>Agregar Segmento</i></a>
 {% endblock %}
 {% block content %}
+    {% if messages %}
+        <div id="componente_modal_info">
+            <modal-info v-if="showModal" url_redirect="">
+                <h3 slot="header" class="action"><i class="fas fa-info-circle"></i>Información</h3>
+                <div slot="body">
+                    {% for message in messages %}
+                        <p>{{ message }}</p>
+                    {% endfor %}
+                </div>
+            </modal-info>
+        </div>
+    {% endif %}
+    <div id="componente_borrar">
+        <modal-borrar v-if="showModal" url_redirect="{% url 'webadminradio:borrar_segmento' 1 %}">
+            <h3 slot="header" class="action"><i class="fas fa-exclamation-triangle "></i>¡Aviso!</h3>
+            <div slot="body">
+                <p>¿Está seguro de que desea eliminar este segmento?</p>
+            </div>
+        </modal-borrar>
+    </div>
     <label for="emisoraSelect">Seleccione una emisora</label>
     <select name="dia" id="emisoraSelect" class="custom-select">
         <option selected disabled>--</option>
@@ -39,4 +60,11 @@
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
     <script src="{% static 'webAdminRadio/js/datatables_segmentos.js' %}"></script>
+    <script src="{% static 'webAdminRadio/js/componentes/ModalInfoComponent.js' %}"></script>
+    <script src="{% static 'webAdminRadio/js/componentes/BorrarComponent.js' %}"></script>
+    <script>
+        function showWarning(id){
+            contenedorBorrar.$data.showModal = true;
+        }
+    </script>
 {% endblock %}
