--- a/AppRadio/WebAdminRadio/templates/webAdminRadio/asignar_locutor.html
+++ b/AppRadio/WebAdminRadio/templates/webAdminRadio/asignar_locutor.html
@@ -1,10 +1,36 @@
 {% extends 'webAdminRadio/base_site.html' %}
 {% load static from staticfiles %}
+{% block cdn_stlyes %}
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+{% endblock %}
 {% block page_style %}
     <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/emisoras.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/asignar_locutor.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/datatables.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'webAdminRadio/css/componentes/modal_info.css' %}">
 {% endblock %}
 {% block content %}
+    {% if messages %}
+        <div id="componente_modal_info">
+            <modal-info v-if="showModal" url_redirect="">
+                <h3 slot="header" class="action"><i class="fas fa-info-circle"></i>Información</h3>
+                <div slot="body">
+                    {% for message in messages %}
+                        <p>{{ message }}</p>
+                    {% endfor %}
+                </div>
+            </modal-info>
+        </div>
+    {% endif %}
+    <div id="componente_locutor">
+        <modal-locutor v-if="showModal">
+            <h3 slot="header" class="action"><i class="fas fa-exclamation-triangle "></i>¡Aviso!</h3>
+            <div slot="body">
+                <p>¿Está seguro de que desea asignar este usuario como locutor?</p>
+            </div>
+        </modal-locutor>
+    </div>
     <label for="emisoraSelect" class="col-sm-1"><b>Emisora</b></label>
     <select id="emisoraSelect" class="custom-select form-control col-sm-4" name="emisora" oninvalid="this.setCustomValidity('Ingrese una emisora válida')" required oninput="this.setCustomValidity('')">
         <option selected disabled>Elja una emisora</option>
@@ -29,15 +55,18 @@
         </div>
         <hr>
     </div>
+        <h3 class="table_lbl"><b>Usuarios</b></h3>
     <div class="table-container">
         <table id="data_table" class="table table-striped table-bordered dt-body-center">
             <thead>
                 <tr>
                     <th>ID</th>
                     <th>Imagen</th>
+                    <th>Nombre de usuario</th>
                     <th>Nombre</th>
-                    <th>Emisora</th>
-                    <th>Acciones</th>
+                    <th>Fecha de nacimiento</th>
+                    <th>Rol</th>
+                    <th>Acción</th>
                 </tr>
             </thead>
             <tbody>
@@ -46,5 +75,9 @@
     </div>
 {% endblock %}
 {% block page_script %}
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+    <script src="{% static 'webAdminRadio/js/componentes/ModalInfoComponent.js' %}"></script>
+    <script src="{% static 'webAdminRadio/js/componentes/LocutorComponent.js' %}"></script>
     <script type="text/javascript" src="{% static 'webAdminRadio/js/asignar_locutor.js' %}"></script>
 {% endblock %}
